<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addstory.AddStoryActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/addAppBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/secondColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="10dp"
                android:background="@drawable/ic_arrow_back"
                android:contentDescription="@string/btnback"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txtAppBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_new_stories"
                android:textAppearance="@style/textTitleStyle"
                android:textColor="@color/focusColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/previewImageView"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/previewimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addAppBar"
        app:srcCompat="@drawable/ic_place_holder" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCamera"
        style="@style/buttonStyleAll"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_intent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toStartOf="@+id/btnGalery" app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/previewImageView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnGalery"
        style="@style/buttonStyleAll"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button_intent"
        android:text="@string/galery"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnCamera"
        app:layout_constraintTop_toTopOf="@id/btnCamera" />

    <com.example.mystoryapp.customview.MyEditText
        android:id="@+id/editTxtDescription"
        android:background="@drawable/bg_edittext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="6"
        android:gravity="top"
        android:padding="8dp"
        android:hint="@string/description"
        android:overScrollMode="always"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        android:scrollHorizontally="false"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/btnGalery"
        app:layout_constraintStart_toStartOf="@+id/btnCamera"
        app:layout_constraintTop_toBottomOf="@+id/btnCamera" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnUpload"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/buttonStyleAll"
        android:background="@drawable/bg_button_intent"
        android:text="@string/upload"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/editTxtDescription"
        app:layout_constraintEnd_toEndOf="@id/editTxtDescription"
        app:layout_constraintTop_toBottomOf="@id/editTxtDescription"/>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>